best-practice/allow-all-np.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-all
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: web
  ingress:
    - {}
